0030564: Coding - math_Gauss uninitialized 'Singular' member variable

Removed unused class field Singular.