src/math/math_Gauss.hxx
@@ -34,8 +34,6 @@ class StdFail_NotDone;
 class math_Matrix;
 class Message_ProgressIndicator;
 
-
-
 //! This class implements the Gauss LU decomposition (Crout algorithm)
 //! with partial pivoting (rows interchange) of a square matrix and
 //! the different possible derived calculation :
@@ -47,8 +45,6 @@ class math_Gauss
 public:
 
   DEFINE_STANDARD_ALLOC
-
-  
 
   //! Given an input n X n matrix A this constructor performs its LU
   //! decomposition with partial pivoting (interchange of rows).
@@ -62,8 +58,7 @@ public:
                              const Handle(Message_ProgressIndicator) & aProgress = Handle(Message_ProgressIndicator)());
   
   //! Returns true if the computations are successful, otherwise returns false
-    Standard_Boolean IsDone() const;
-  
+  Standard_Boolean IsDone() const { return Done; }
 
   //! Given the input Vector B this routine returns the solution X of the set
   //! of linear equations A . X = B.
@@ -72,7 +67,6 @@ public:
   //! Exception DimensionError is raised if the range of B is not
   //! equal to the number of rows of A.
   Standard_EXPORT void Solve (const math_Vector& B, math_Vector& X) const;
-  
 
   //! Given the input Vector B this routine solves the set of linear
   //! equations A . X = B. B is replaced by the vector solution X.
@@ -81,14 +75,12 @@ public:
   //! Exception DimensionError is raised if the range of B is not
   //! equal to the number of rows of A.
   Standard_EXPORT void Solve (math_Vector& B) const;
-  
 
   //! This routine returns the value of the determinant of the previously LU
   //! decomposed matrix A.
   //! Exception NotDone may be raised if the decomposition of A was not done
   //! successfully, zero is returned if the matrix A was considered as singular.
   Standard_EXPORT Standard_Real Determinant() const;
-  
 
   //! This routine outputs Inv the inverse of the previously LU decomposed
   //! matrix A.
@@ -101,33 +93,19 @@ public:
   //! Is used to redefine the operator <<.
   Standard_EXPORT void Dump (Standard_OStream& o) const;
 
-
-
-
 protected:
 
-
-
-  Standard_Boolean Singular;
   math_Matrix LU;
   math_IntegerVector Index;
   Standard_Real D;
-
-
-private:
-
-
-
   Standard_Boolean Done;
-
 
 };
 
-
-#include <math_Gauss.lxx>
-
-
-
-
+inline Standard_OStream& operator<<(Standard_OStream& o, const math_Gauss& mG)
+{
+  mG.Dump(o);
+  return o;
+}
 
 #endif // _math_Gauss_HeaderFile
